--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "request-all-in-one",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
   "type": "module",
   "main": "dist/my-library.umd.js",
@@ -30,12 +30,12 @@
     "socket.io-client": "^4.7.5"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "react-dom": ">=18.0.0",
-    "socket.io-client": ">=4.7.5",
     "@apollo/client": ">=3.11.1",
     "@microsoft/fetch-event-source": ">=2.0.1",
-    "@tanstack/react-query": ">=5.51.15"
+    "@tanstack/react-query": ">=5.51.15",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
+    "socket.io-client": ">=4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
